Ranking page Advertiser angular UI Grid and subgrid-5

--- a/templates/expandableRowTemplate.html
+++ b/templates/expandableRowTemplate.html
@@ -1,1 +1,1 @@
-<div ui-grid="row.entity.subGridOptions" ui-grid-auto-resize ui-grid-exporter ui-grid-pagination style="height:385px;"></div>
+<div ui-grid="row.entity.subGridOptions" ui-grid-exporter ui-grid-expandable ui-grid-selection ui-grid-pagination style="height:385px;"></div>
