--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -241,6 +241,6 @@
             </div>
         </main>
     </div>
-    <div id="grid1" ui-grid="gridOptions" ui-grid-exporter ui-grid-expandable ui-grid-selection ui-grid-pagination class="grid"></div>
+    <div id="grid1" ui-grid="gridOptions" ui-grid-exporter ui-grid-expandable ui-grid-selection ui-grid-pagination ui-grid-grouping class="grid"></div>
 </div>
    
