--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -213,8 +213,7 @@
                     <ul>
                         <li>
                             Network
-                            <div class="open-filter-popup custom-tooltip" data-toggle="modal"
-                                data-target="#network-filter">All <i class="fa fa-caret-down fa-lg"></i>
+                            <div class="open-filter-popup custom-tooltip" ng-click="openNetworkLogModal();">All <i class="fa fa-caret-down fa-lg"></i>
                                 <div class="top">
                                     <i></i>
                                     All
