--- a/templates/modals/newTypeDialog.html
+++ b/templates/modals/newTypeDialog.html
@@ -6,26 +6,31 @@
 </div>
 <div class="modal-body">
     <div class="checkbox">
-        <input class="checkbox-custom cat_all" type="checkbox" id="New">
+        <input class="checkbox-custom-label" type="checkbox" id="New" ng-model="newCheckBox" ng-change="checkRadioButton()">
         <label for="New" class="checkbox-custom-label">
-            <span class="v-align-middle">New</span></label>
+            <span class="v-align-middle">New</span>
+        </label>
     </div>
     <div class="d-flex mt-3 mb-4">
+        <label class="radio mr-2" ng-hide="type == 'brands'">
+            <input type="radio" ng-model="newType" value="advertisers" id="advertisers" >
+                <span>Advertiser</span>
+        </label>
         <label class="radio mr-2">
-            <input type="radio" name="r" value="10">
+            <input type="radio" ng-model="newType" value="brands" id="brands">
             <span>Brands</span>
         </label>
         <label class="radio">
-            <input type="radio" name="r" value="12">
+            <input type="radio" ng-model="newType" value="creatives" id="creatives">
             <span>Creatives</span>
         </label>
     </div>
 </div>
 <div class="modal-footer">
     <div class="btn-grp d-flex justify-content-end border-top pt-3">
-        <button id="cancelNet" class="btn btn-black" data-dismiss="modal" aria-label="Close">
-            <i class="fa fa-times" title="cancel" ng-click="closeModal();"></i>Cancel</button>
-        <button id="applyNet" class="btn btn-blue">
-            <i class="fa fa-check" title="apply" ng-click="closeModal();"></i>Apply</button>
+        <button id="cancelNet" class="btn btn-black" ng-click="closeModal();">
+            <i class="fa fa-times" title="cancel" ></i>Cancel</button>
+        <button id="applyNet" class="btn btn-blue" ng-click="applyModal();">
+            <i class="fa fa-check" title="apply" ></i>Apply</button>
     </div>
 </div>
