All vlaue was not taking

--- a/templates/modals/networkLogDialog.html
+++ b/templates/modals/networkLogDialog.html
@@ -9,8 +9,8 @@
         <ul class="top-filter-bar">
             <li>
                 <h5>Network</h5>
-                <div class="checkbox">{{selectedNetwork}}
-                    <input class="radio-custom network_radio" type="radio" id="networks"  name="networkList" ng-model="selectedNetwork" ng-value="All" >
+                <div class="checkbox">
+                    <input class="radio-custom network_radio" type="radio" id="networks"  name="networkList" ng-model="selectedNetwork" value="All" >
                         <span class="v-align-middle">{{network_name}}</span></label>
                 </div>
             </li>
