Filter pop-up angular UI Grid get user list-6

--- a/templates/modals/FilterDialog.html
+++ b/templates/modals/FilterDialog.html
@@ -24,6 +24,7 @@
         </ul>
         </div>
         <span id="duplicate-filter-error" class="duplicate-filter-error" ng-show="filter_error">Filter name already exists.</span>
-        <div class="grid-content" id='filter_list_network'></div>
+        <!-- <div class="grid-content" id='filter_list_network'></div> -->
+        <div id="filter_list_network" ui-grid="gridOptions" ui-grid-selection class="grid grid-content"></div>
     </div>
 </div>
