Filter pop-up angular UI Grid Brand and Advertiser List-7

--- a/templates/modals/ListDialog.html
+++ b/templates/modals/ListDialog.html
@@ -24,7 +24,8 @@
             </ul>
             </div>
             <span id="duplicate-filter-error" class="duplicate-filter-error" ng-show="list_error">List name already exists.</span>
-            <div class="grid-content" id='filter_list_network'></div>
+            <!-- <div class="grid-content" id='filter_list_network'></div> -->
+            <div id="brandAvd_list_network" ui-grid="gridOptionsList" ui-grid-selection class="grid grid-content"></div>
         </div>
     </div>
     
