--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2401,6 +2401,12 @@ header.sticky-top {
   display: inline-block;
 }
 
+.edit-list-loader {
+  display: none;
+  width: 20px;
+  height: 20px;
+}
+
 @media (max-width: 767px) {
   .filter-popup .network-filter-bottom .dpi-newnetwork {
     width: 100%;
