--- a/templates/userAccount.html
+++ b/templates/userAccount.html
@@ -90,7 +90,7 @@
                                         placeholder="Please enter mobile # for Authy Authentication"
                                         ng-model="admin_user.user_result[0].phone_number" id="mobile_edit" required
                                         ng-model-options="{'debounce': 250 }" masked-input
-                                        ng-blur="verifyDuplicateMobile(admin_user.user_result[0].phone_number)" />
+                                        ng-blur="verifyDuplicateMobile()" />
 
                                     <input maxlength="20" type="hidden" name="hidden_mobile"
                                         value="{{admin_user.user_result[0].mobile}}" id="mobile_edit_hidden" />
@@ -175,7 +175,7 @@
                                 type="button" value="Save"
                                 ng-disabled="edit_user.$invalid || usernameValid || mobileValid"
                                 ng-click="editUser(admin_user.user_result[0].user_id)" id="edit_user_btn"><i
-                                    class="fa fa-check" title="save"></i>Save</button>
+                                ng-disabled="save_clicked" class="fa fa-check" title="save"></i>Save</button>
                         </div>
                     </form>
                 </div>
@@ -184,6 +184,38 @@
     </div>
     <!-- Edit User Page End -->
 
+    <div class="modal fade filter-data md-popup super-admin-popup" id="advancedModal3" tabindex="-1" role="dialog"
+            aria-labelledby="advancedModal3">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Add New User</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"></span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="grid-content" style="padding: 1em;">
+                        <p>
+                            You have reached the maximum allowed users based on your subscription plan.
+                            Please contact DRMetrix to upgrade your subscription plan.
+                        </p>
+                        <div class="align-center grid-block upgrade">
+                            <input type="button" zf-close="" class="button" value="Contact Now"
+                                ng-click="sendMail()">
+                        </div>
+                        <div class="align-center grid-block">
+                            <ul>
+                                <li><a href="mailto:info@drmetrix.com">info@drmetrix.com</a></li>
+                                <li>&bull;951-234-3899</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- ResetPassword Start -->
     <div class="modal fade network-filter-popup filter-data md-popup" id="animatedModal" tabindex="-1" role="dialog"
         aria-labelledby="exampleModalLabel">
@@ -191,7 +223,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Reset Password</h5>
-                    <button type="button" class="cancelBtn btn btn-black" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true"></span>
                     </button>
                 </div>
@@ -204,13 +236,100 @@
     </div>
     <!-- Reset Password End -->
 
-    <!-- Delete User Page Start -->
-    <div class="modal fade network-filter-popup filter-data md-popup" id="deleteMessage" tabindex="-1" role="dialog"
-        aria-labelledby="exampleModalLabel">
+    <div class="modal fade filter-data md-popup super-admin-popup" id="saveMessage" tabindex="-1" role="dialog"
+            aria-labelledby="saveMessage">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Contact Us</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"></span>
+                    </button>
+                </div>
                 <div class="modal-body">
-                    <p class="text-center">Record deleted successfully. </p>
+                    <p class="text-center">Email sent successfully.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade filter-data md-popup super-admin-popup" id="saveMessage" tabindex="-1" role="dialog"
+            aria-labelledby="saveMessage">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Save Message</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"></span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p class="text-center">Record added successfully.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade filter-data md-popup super-admin-popup" id="editMessage" tabindex="-1" role="dialog"
+        aria-labelledby="editMessage">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit Message</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"></span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p class="text-center">Record updated successfully.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade filter-data md-popup super-admin-popup" id="deleteUser" tabindex="-1" role="dialog"
+        aria-labelledby="deleteUser">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Confirm Delete</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"></span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="grid-content" id="confirm_box">
+                        <div class="align-center grid-block">
+                            <p><span>Are you sure you want to delete?</span></p>
+                        </div>
+                        <div class="align-center grid-block">
+                            <button id="cancelBtn" type="button" class="cancelBtn btn btn-sm btn-default btnclose" type="button" class="close" data-dismiss="modal" aria-label="Close">No</button>
+                            <button id="applyBtn" type="button" class="applyBtn btn btn-sm btn-success btnapply" ng-click="deleteUser();">Yes</button>
+                        </div>
+                    </div>
+                    <div class="grid-content" id="message_box" style="display:none;">
+                        <div class="align-center grid-block" style="align-items: center; height: 155px;">
+                            <span id="success_msg"></span>
+                            <span id="error_msg"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Delete User Page Start -->
+    <div class="modal fade filter-data md-popup super-admin-popup" id="deleteMessage" tabindex="-1" role="dialog"
+        aria-labelledby="deleteMessage">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Delete Message</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"></span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p class="text-center">Record deleted successfully.</p>
                 </div>
             </div>
         </div>
