--- a/templates/airingDetail.html
+++ b/templates/airingDetail.html
@@ -1,9 +1,9 @@
 <div ng-controller="airingsDetailController" ng-if="page_call=='airings_detail'">Airings
 <button ng-click="backToRankingpage();">Back</button>
-<!-- <div class="container-fluid">
+<div class="container-fluid">
 
-    <div id="gridDetailPage" ui-grid="gridAiringSpend" ui-grid-exporter ui-grid-expandable ui-grid-selection ui-grid-pagination ui-grid-grouping class="grid"></div>
-</div> -->
+    <div id="gridDetailPage" ui-grid="gridAiringSpend" class="grid"></div>
+</div>
 
 
 
