--- a/templates/airingDetail.html
+++ b/templates/airingDetail.html
@@ -2,7 +2,7 @@
 <button ng-click="backToRankingpage();">Back</button>
 <div class="container-fluid">
 
-    <div id="gridDetailPage" ui-grid="gridAiringSpend" class="grid"></div>
+    <div id="gridDetailPage" ui-grid="gridAiringSpend" ui-grid-exporter ui-grid-expandable ui-grid-pagination ui-grid-grouping class="grid gridCustHeight"></div>
 </div>
 
 
