--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -64,4 +64,4 @@
 </div>
 </div>
 
-<div class="main-filter" ng-include="'templates/airingDetail.html'"></div>
+<div class="" ng-include="'templates/airingDetail.html'"></div>
