Airing Detail creative/total spend subgrid appear grid-11

--- a/templates/airingDetail.html
+++ b/templates/airingDetail.html
@@ -1,4 +1,4 @@
-<div ng-controller="airingsDetailController" ng-if="page_call=='airings_detail'">Airings
+<div ng-controller="airingsDetailController" ng-if="page_call=='airings_detail'">Airings {{$rootScope.sidx}}
 <button ng-click="backToRankingpage();">Back</button>
 <div class="container-fluid">
 
