--- a/templates/bootstrap-modal.html
+++ b/templates/bootstrap-modal.html
@@ -414,14 +414,14 @@
                 <div class="left title">Refine By <span id="refine_by"></span> with <span id="refine_by_text"></span> for <span id="tab_title"></span>: <span id="header_refine_log"></span></div>
              </h5>
              <div class="d-flex justify-content-end align-items-center">
-                <div id="excel_loader_refine_log" class="loader-exl" style="display:none; margin: 0 1em 0 3.2em;"><img src="/drmetrix/assets/img/excel_spinner.gif" alt="Loading icon"  /></div>
-                <button class="btn btn-blue excel-btn" id="tfn_url_export" onclick="tfn_url_export();"><img src="assets/img/download.svg"> Excel</button>
+                <div id="excel_loader_refine_log" class="loader-exl" style="display:none; margin: 0 1em 0 3.2em;"><img src="/drmetrix/images/img/excel_spinner.gif" alt="Loading icon"  /></div>
+                <button class="btn btn-blue excel-btn" id="tfn_url_export" onclick="tfn_url_export();"><img src="assets/images/download.svg"> Excel</button>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                    <span aria-hidden="true"></span>
                 </button>
              </div>
              <div class="excel-ranking-popup refine_log_exp renamefile-popup" id="refine_log_exp" style="display: none;">
-                <p class="black-txt">Your report is ready for download in the <button class="btn btn-black report-tab"><img src="/drmetrix/assets/img/reports.svg"> Reports</button> tab.</p>
+                <p class="black-txt">Your report is ready for download in the <button class="btn btn-black report-tab"><img src="/drmetrix/images/img/reports.svg"> Reports</button> tab.</p>
                 <div class="rename-form">
                    <div class="medium-9">
                       <span class="form-label black-txt">File Name</span>
