--- a/templates/globalSearch.html
+++ b/templates/globalSearch.html
@@ -1,3 +1,3 @@
 <strong>Global Search</strong>
 <button ng-click="backToRankingpage();">Back</button> 
-<div id="globalSearch" ui-grid="gridGlobalSearch" ui-grid-exporter ui-grid-pagination ui-grid-grouping class="grid"></div>
+<div id="globalSearch" ui-grid="gridGlobalSearch" ui-grid-exporter ui-grid-pagination ui-grid-grouping class="grid" style="height:350px;"></div>
