Modal over modal problem solved

--- a/templates/modals/deleteConfirm.html
+++ b/templates/modals/deleteConfirm.html
@@ -10,8 +10,8 @@
             <p><span>Are you sure you want to delete?</span></p>
         </div>
         <div class="align-center grid-block">
-            <button id="cancelBtn" type="button" class="cancelBtn btn btn-sm btn-default btnclose" type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="closeModal();">No</button>
-            <button id="applyBtn" type="button" class="applyBtn btn btn-sm btn-success btnapply" ng-click="deleteUser();">Yes</button>
+            <button id="cancelBtn" type="button" class="btn btn-sm btn-warning cancelBtn btn-default btnclose" ng-click="closeModal();" data-dismiss="modal" aria-label="Close">No</button>
+            <button id="applyBtn"  type="button" class="btn btn-sm btn-primary applyBtn  btn-success btnapply" ng-click="deleteUser();">Yes</button>
         </div>
     </div>
     <div class="grid-content" id="message_box" style="display:none;">
