Report pop-up appear ui-grid occured-16

--- a/templates/modals/reportsdialog.html
+++ b/templates/modals/reportsdialog.html
@@ -8,5 +8,5 @@
     <div class="report-tab-section">
         <a href="javascript:void(0);" ng-click="show_user_filters();" class="refresh-report">Refresh <i class="fa fa-refresh fa-lg"></i></a>    
     </div>
-    <div id="filter_list_network" ui-grid="gridOptionsProgram" ui-grid-pagination ui-grid-grouping class="grid grid-content"></div>
+    <div id="filter_list_network" ui-grid="gridOptionsReports" ui-grid-pagination ui-grid-grouping class="grid grid-content"></div>
 </div>
