--- a/templates/primary_filter.html
+++ b/templates/primary_filter.html
@@ -126,7 +126,7 @@
     </li>
     <li class="btn-wrapper">
         <button class="btn btn-blue show-div edit btn-sm" ng-click="editableContent();" ng-hide="editable"><i class="fa fa-pencil" title="edit"></i>Edit</button>
-        <button class="btn btn-blue apply btn-sm"  ng-click="cancelFilter()"><i class="fa fa-check" title="apply"></i>Apply</button>
+        <button class="btn btn-blue apply btn-sm"  ng-click="applyFilter()"><i class="fa fa-check" title="apply"></i>Apply</button>
         <button class="btn btn-blue reset btn-sm"  ng-click="cancelFilter()"  ng-show="editable"><i class="fa fa-rotate-right" title="reset"></i>Reset</button>
         <button class="btn btn-blue hide-div cancel btn-sm" ng-show="editable" ng-click="cancelFilter()"><i class="fa fa-times" title="cancel"></i>Cancel</button>                            
     </li>
